--- a/bio1m.bib
+++ b/bio1m.bib
@@ -820,7 +820,7 @@ Madan K. Oli},
 
 
 @article{nair_selective_2003,
-	title = {A Selective Sweep Driven by Pyrimethamine Treatment in Southeast Asian Malaria Parasites},
+	title = {A Selective Sweep Driven by Pyrimethamine Treatment in Southeast {Asian} Malaria Parasites},
 	volume = {20},
 	issn = {0737-4038, 1537-1719},
 	doi = {10.1093/molbev/msg162},
@@ -2166,3 +2166,102 @@ View full text},
 	file = {Improved survival at low lung function in cystic fibrosis\: cohort study from 1990 to 2007 | The BMJ:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/E4WGBAUE/bmj.html:text/html}
 }
 
+
+
+@article{steel_role_2004,
+	title = {The role of scientists in the environmental policy process: a case study from the {American} west},
+	volume = {7},
+	shorttitle = {The role of scientists in the environmental policy process},
+	number = {1},
+	journal = {Environmental Science \& Policy},
+	author = {Steel, Brent and List, Peter and Lach, Denise and Shindler, Bruce},
+	year = {2004},
+	pages = {1--13}
+}
+
+
+@article{currat_comment_2006,
+	title = {Comment on "{Ongoing} adaptive evolution of {ASPM}, a brain size determinant in {Homo} sapiens" and "{Microcephalin}, a gene regulating brain size, continues to evolve adaptively in humans"},
+	volume = {313},
+	issn = {1095-9203},
+	doi = {10.1126/science.1122712},
+	abstract = {Mekel-Bobrov et al. and Evans et al. (Reports, 9 Sept. 2005, p. 1720 and p. 1717, respectively) examined sequence data from modern humans within two gene regions associated with brain development, ASPM and microcephalin, and concluded that selection of these genes must be ongoing. We show that models of human history that include both population growth and spatial structure can generate the observed patterns without selection.},
+	language = {eng},
+	number = {5784},
+	journal = {Science (New York, N.Y.)},
+	author = {Currat, Mathias and Excoffier, Laurent and Maddison, Wayne and Otto, Sarah P. and Ray, Nicolas and Whitlock, Michael C. and Yeaman, Sam},
+	month = jul,
+	year = {2006},
+	pmid = {16840683},
+	keywords = {Adaptation, Biological, Biological Evolution, Brain, Demography, Founder Effect, Gene Frequency, Haplotypes, Humans, Models, Theoretical, Nerve Tissue Proteins, Organ Size, Population Density, Population Growth, Selection, Genetic, Sequence Analysis, DNA},
+	pages = {172; author reply 172}
+}
+
+@article{timpson_comment_2007,
+	title = {Comment on papers by {Evans} et al. and {Mekel}-{Bobrov} et al. on {Evidence} for {Positive} {Selection} of {MCPH}1 and {ASPM}},
+	volume = {317},
+	issn = {1095-9203},
+	doi = {10.1126/science.1141705},
+	abstract = {Evans et al. and Mekel-Bobrov et al. (Reports, 9 September 2005, p. 1717 and 1720, respectively) reported that human genetic variants of Microcephalin (MCPH1) and abnormal spindle-like microcephaly associated (ASPM) are under strong positive selection. We genotyped these variants in 9000 children and find no meaningful associations with brain size and various cognitive measures, which indicates that contrary to previous speculations, ASPM and MCPH1 have not been selected for brain-related effects.},
+	language = {eng},
+	number = {5841},
+	journal = {Science (New York, N.Y.)},
+	author = {Timpson, Nicholas and Heron, Jon and Smith, George Davey and Enard, Wolfgang},
+	month = aug,
+	year = {2007},
+	pmid = {17717170},
+	keywords = {Brain, Cephalometry, Child, Cognition, Genotype, Haplotypes, Humans, Infant, Newborn, Mental Processes, Motor Skills, Nerve Tissue Proteins, Polymorphism, Single Nucleotide, Selection, Genetic},
+	pages = {1036; author reply 1036}
+}
+
+
+@article{tenesa_recent_2007,
+	title = {Recent human effective population size estimated from linkage disequilibrium},
+	volume = {17},
+	issn = {1088-9051},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1832099/},
+	doi = {10.1101/gr.6023607},
+	abstract = {Effective population size (Ne) determines the amount of genetic variation, genetic drift, and linkage disequilibrium (LD) in populations. Here, we present the first genome-wide estimates of human effective population size from LD data. Chromosome-specific effective population size was estimated for all autosomes and the X chromosome from estimated LD between SNP pairs {\textless}100 kb apart. We account for variation in recombination rate by using coalescent-based estimates of fine-scale recombination rate from one sample and correlating these with LD in an independent sample. Phase I of the HapMap project produced between 18 and 22 million SNP pairs in samples from four populations: Yoruba from Ibadan (YRI), Nigeria; Japanese from Tokyo (JPT); Han Chinese from Beijing (HCB); and residents from Utah with ancestry from northern and western Europe (CEU). For CEU, JPT, and HCB, the estimate of effective population size, adjusted for SNP ascertainment bias, was ∼3100, whereas the estimate for the YRI was ∼7500, consistent with the out-of-Africa theory of ancestral human population expansion and concurrent bottlenecks. We show that the decay in LD over distance between SNPs is consistent with recent population growth. The estimates of Ne are lower than previously published estimates based on heterozygosity, possibly because they represent one or more bottlenecks in human population size that occurred ∼10,000 to 200,000 years ago.},
+	number = {4},
+	urldate = {2018-10-26},
+	journal = {Genome Research},
+	author = {Tenesa, Albert and Navarro, Pau and Hayes, Ben J. and Duffy, David L. and Clarke, Geraldine M. and Goddard, Mike E. and Visscher, Peter M.},
+	month = apr,
+	year = {2007},
+	pmid = {17351134},
+	pmcid = {PMC1832099},
+	pages = {520--526}
+}
+
+@article{park_effective_2011,
+	title = {Effective population size of current human population},
+	volume = {93},
+	issn = {1469-5073},
+	doi = {10.1017/S0016672310000558},
+	abstract = {In order to estimate the effective population size (Ne) of the current human population, two new approaches, which were derived from previous methods, were used in this study. One is based on the deviation from linkage equilibrium (LE) between completely unlinked loci in different chromosomes and another is based on the deviation from the Hardy-Weinberg Equilibrium (HWE). When random mating in a population is assumed, genetic drifts in population naturally induce linkage disequilibrium (LD) between chromosomes and the deviation from HWE. The latter provides information on the Ne of the current population, and the former provides the same when the Ne is constant. If Ne fluctuates, recent Ne changes are reflected in the estimates based on LE, and the comparison between two estimates can provide information regarding recent changes of Ne. Using HapMap Phase III data, the estimates were varied from 622 to 10 437, depending on populations and estimates. The Ne appeared to fluctuate as it provided different estimates for each of the two methods. These Ne estimates were found to agree approximately with the overall increment observed in recent human populations.},
+	language = {eng},
+	number = {2},
+	journal = {Genetics Research},
+	author = {Park, Leeyoung},
+	month = apr,
+	year = {2011},
+	pmid = {21450133},
+	keywords = {Genetic Variation, Genetics, Population, Haplotypes, Humans, Linkage Disequilibrium, Models, Genetic, Population Density},
+	pages = {105--114}
+}
+
+
+@article{winter_human_2001,
+	title = {Human type {I} hair keratin pseudogene φ{hHaA} has functional orthologs in the chimpanzee and gorilla: evidence for recent inactivation of the human gene after the {Pan}-{Homo} divergence},
+	volume = {108},
+	issn = {0340-6717},
+	shorttitle = {Human type {I} hair keratin pseudogene φ{hHaA} has functional orthologs in the chimpanzee and gorilla},
+	url = {http://journals.scholarsportal.info/detailsundefined},
+	abstract = {In addition to nine functional genes, the human type I hair keratin gene cluster contains a pseudogene, φhHaA (KRTHAP1), which is thought to have been inactivated by a single base-pair substitution that introduced a premature TGA termination codon into exon 4. Large-scale genotyping of human, chimpanzee, and gorilla DNAs revealed the homozygous presence of the φhHaA nonsense mutation in humans of different ethnic backgrounds, but its absence in the functional orthologous chimpanzee (cHaA) and gorilla (gHaA) genes. Expression analyses of the encoded cHaA and gHaA hair keratins served to highlight dramatic differences between the hair keratin phenotypes of contemporary humans and the great apes. The relative numbers of synonymous and non-synonymous substitutions in the φhHaA and cHaA genes, as inferred by using the gHaA gene as an outgroup, suggest that the human hHaA gene was inactivated only recently, viz., less than 240,000 years ago. This implies that the hair keratin phenotype of hominids prior to this date, and after the Pan-Homo divergence some 5.5 million years ago, could have been identical to that of the great apes. In addition, the homozygous presence of the φhHaA exon 4 nonsense mutation in some of the earliest branching lineages among extant human populations lends strong support to the "single African origin" hypothesis of modern humans.},
+	number = {1},
+	urldate = {2018-11-02},
+	journal = {Human Genetics},
+	author = {Winter, Hermelita and Langbein, Lutz and Krawczak, Michael and Cooper, David N. and Jave-Suarez, Luis F. and Rogers, Michael A. and Praetzel, Silke and Heidt, Peter J. and Schweizer, Jürgen},
+	year = {2001},
+	pages = {37--42}
+}
